--- a/CollectorQi/Views/ImprimirPage.xaml
+++ b/CollectorQi/Views/ImprimirPage.xaml
@@ -75,6 +75,9 @@
                 <Button x:Name="BtnReparo" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                          Clicked="BtnReparo_Clicked" Grid.Row="2" Grid.Column="0" Text="Reparo" TextColor="White" />
 
+                <Button x:Name="BtnVoltar" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="voltarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
+                         Clicked="BtnVoltar_Clicked" Grid.Row="3" Grid.Column="0" Text="Voltar" TextColor="White" />                
+
             </Grid>
         </StackLayout>
     </ContentPage.Content>
