--- a/CollectorQi/Views/InventarioListaItemPage.xaml
+++ b/CollectorQi/Views/InventarioListaItemPage.xaml
@@ -36,7 +36,7 @@
                     </Grid.RowDefinitions>
 
                     <Grid Grid.Row="0">
-                        <CollectionView x:Name="cvInventarioItem" ItemsSource="{Binding Items}" SelectionMode="Single" Grid.Row="0" Margin="10,0,10,0">
+                        <CollectionView x:Name="cvInventarioItem" ItemsSource="{Binding Items}" SelectionMode="Single" Grid.Row="0" Margin="10,0,10,0" SelectionChanged="OnCollectionViewSelectionChanged">
                             <CollectionView.EmptyView>
                                 <StackLayout>
                                     <Label Text="Nenhum item no inventário" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"  />
@@ -79,7 +79,7 @@
                                                             <ColumnDefinition Width="Auto" />
                                                         </Grid.ColumnDefinitions>
                                                         <Label Grid.Row="0" Grid.Column="0" Text="Item: " FontAttributes="Bold"  FontSize="Micro" />
-                                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding InventarioItemId}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />
+                                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding ItCodigo}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />
                                                         <!--<Label Grid.Row="0" Grid.Column="1" Text="{Binding ItCodigo}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />-->
                                                         <!--<Label Grid.Row="0" Grid.Column="2" Text="{Binding __item__.DescItem}" LineBreakMode="TailTruncation"  HorizontalTextAlignment="Start" VerticalTextAlignment="Start"  FontSize="Micro" />-->
                                                     </Grid>
@@ -192,28 +192,27 @@
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
+                        <!--    <ColumnDefinition Width="*" /> -->
                         </Grid.ColumnDefinitions>
 
                         <Grid Grid.Column="0" Margin="0,0,0,0" VerticalOptions="End" HorizontalOptions="FillAndExpand">
-                            <Button x:Name="BtnBuscaItem" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
-                                    Clicked="OnClick_BuscaItem" Grid.Row="0" Grid.Column="0" Text="Busca Item (Etiqueta)" TextColor="White" />
-                            <Button x:Name="BtnCaixaIncompleta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
-                                    Clicked="OnClick_CaixaIncompleta"  Grid.Row="1" Grid.Column="0" Text="Caixa Incompleta" TextColor="White" />
+                          <!--  <Button x:Name="BtnBuscaItem" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
+                                    Clicked="OnClick_BuscaItem" Grid.Row="0" Grid.Column="0" Text="Busca Item (Etiqueta)" TextColor="White" /> -->
+                          <!--  <Button x:Name="BtnCaixaIncompleta" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
+                                    Clicked="OnClick_CaixaIncompleta"  Grid.Row="1" Grid.Column="0" Text="Caixa Incompleta" TextColor="White" /> -->
                             <Button x:Name="BtnImprimir" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
-                                    Clicked="BtnImprimir_Clicked" Grid.Row="2" Grid.Column="0" Text="Imprimir" TextColor="White" />
+                                    Clicked="BtnImprimir_Clicked" Grid.Row="0" Grid.Column="0" Text="Imprimir Etiqueta" TextColor="White" />
                         </Grid>
 
-                        <Grid Grid.Column="1" Margin="0,0,0,0" VerticalOptions="End" HorizontalOptions="FillAndExpand">
+                      <!--  <Grid Grid.Column="1" Margin="0,0,0,0" VerticalOptions="End" HorizontalOptions="FillAndExpand">
                             <Button x:Name="BtnEfetivaInventario" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
                                     Clicked="OnClick_EfetivaInventario" Grid.Row="0" Grid.Column="0" Text="Efetiva Inventário" TextColor="White" />
                             <Button x:Name="BtnLimpar" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
                                     Clicked="BtnLimpar_Clicked" Grid.Row="1" Grid.Column="0" Text="Limpar" TextColor="White" />
                             <Button x:Name="BtnZerar" android:Button.UseDefaultShadow="true" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  BorderRadius="16"
                                     Clicked="BtnZerar_Clicked"  Grid.Row="2" Grid.Column="0" Text="Zerar" TextColor="White" />
-                        </Grid>
+                        </Grid> -->
                     </Grid>
-
                 </Grid>
             </StackLayout>
         </StackLayout>
