--- a/CollectorQi/Views/NotaFiscalConferenciaReparosListaPage.xaml
+++ b/CollectorQi/Views/NotaFiscalConferenciaReparosListaPage.xaml
@@ -112,8 +112,8 @@
 
                 <Button x:Name="BtnScan" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                           Clicked="BtnScan_Clicked" Grid.Row="0" Grid.Column="0" Text="Buscar Etiqueta" TextColor="White" />
-                <Button x:Name="BtnProximo" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
-                          Grid.Row="1" Grid.Column="0" Text="Próximo" TextColor="White" />
+                <Button x:Name="BtnFinalizarNotaFiscal" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
+                          Grid.Row="1" Grid.Column="0" Text="Finalizar Nota Fiscal" TextColor="White" />
                 <Button x:Name="BtnCarregaNotaFiscal" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                           Clicked="OnClick_CarregaNotaFiscal" Grid.Row="2" Grid.Column="0" Text="Carrega Nota Fiscal em andamento" TextColor="White" />
                
