--- a/CollectorQi/Views/InventarioPage.xaml
+++ b/CollectorQi/Views/InventarioPage.xaml
@@ -4,9 +4,10 @@
              xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              Title="Inventário"
+             BackgroundImage="pageBackground.png"
              x:Class="CollectorQi.Views.InventarioPage">
-       <ContentPage.Content>
-         <Grid BackgroundColor="#4E4E4E" Opacity="1">
+    <ContentPage.Content>
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
@@ -18,7 +19,7 @@
                             <ImageCell Text="{Binding Name}" 
                                        Detail="{Binding SubTitle}" 
                                        ImageSource="{Binding Image}" 
-                                       TextColor="White" 
+                                       TextColor="#aaaaaa"
                                        DetailColor="#aaaaaa"                                      
                                        CommandParameter="{Binding .}"/>
                         </DataTemplate>
