--- a/CollectorQi/Views/RecebimentoPage.xaml
+++ b/CollectorQi/Views/RecebimentoPage.xaml
@@ -18,7 +18,7 @@
                             <ImageCell Text="{Binding Name}" 
                                        Detail="{Binding SubTitle}" 
                                        ImageSource="{Binding Image}" 
-                                       TextColor="White" 
+                                       TextColor="#aaaaaa"
                                        DetailColor="#aaaaaa"                                      
                                        CommandParameter="{Binding .}"/>
                         </DataTemplate>
