--- a/CollectorQi/Views/ESCL018/InventarioListaItemPage.xaml
+++ b/CollectorQi/Views/ESCL018/InventarioListaItemPage.xaml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core" xmlns:sys="clr-namespace:System;assembly=mscorlib" Title="Inventário" x:Class="CollectorQi.Views.InventarioListaItemPage">
 
-        <ContentPage.Content BackgroundColor="#4E4E4E">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Icon="print.png" Text="Search" Clicked="ToolbarItem_Clicked"></ToolbarItem>
+    </ContentPage.ToolbarItems>
+    
+    <ContentPage.Content BackgroundColor="#4E4E4E">
         <StackLayout BackgroundColor="#fff">
             <!--<Grid BackgroundColor="#4E4E4E" Opacity="1" Margin="5,10,1,1">
                 <Grid.RowDefinitions>
